changed db as per standard